--- a/template/LP-form-html.html
+++ b/template/LP-form-html.html
@@ -17,7 +17,7 @@
           <input type="checkbox" name="checkTab" checked>Tablet
         </label>
         <label class="checkbox-inline">
-          <input type="checkbox" name="checkMob">Mobile
+          <input type="checkbox" name="checkMob" checked>Mobile
         </label>
     </div>
 
