--- a/template/homePage/homePage.html
+++ b/template/homePage/homePage.html
@@ -449,6 +449,16 @@ button.signup2:hover:after,
   margin-left: 0px;
 }
 
+.FS-SHOW-DESKTOP > div > div.wrapper:nth-child(1) > div > div:nth-child(2) { 
+    position:absolute; 
+    left:0px; 
+    top:0px; 
+}
+    
+.wrapper1 {padding: 0px 0px;}
+#content > div.wrapper { width:100%; max-width:2000px;}	
+		
+		
 {{#video}}
     /*---------------
         VIDEO CSS
