--- a/template/homePage/widePage.html
+++ b/template/homePage/widePage.html
@@ -122,8 +122,17 @@
 		@font-face {
 			font-family: 'GothamMedium';
 			src: url("font/Gotham-Medium.otf") format("opentype");
-
 		}
+		
+.FS-SHOW-DESKTOP > div > div.wrapper:nth-child(1) > div > div:nth-child(2) { 
+    position:absolute; 
+    left:0px; 
+    top:0px; 
+}
+    
+.wrapper1 {padding: 0px 0px;}
+#content > div.wrapper { width:100%; max-width:2000px;}			
+		
 
    {{#video}}
     /*---------------
