Fix preview issue

--- a/template/category/Cat-form-simple-link.html
+++ b/template/category/Cat-form-simple-link.html
@@ -12,12 +12,12 @@
 	  </div>
 
 	  
-      <div class="row">
+      <div class="row" data-lang="eng">
         <h4>English</h4>
         
         <div class="row">
           <label>Image Picture :</label><br>
-          <input type='text' name='imageENG' data-lang='eng' class='col-md-6 form-control' placeholder='Enter the English picture name' onblur='imgChange(this)'>
+          <input type='text' name='img' data-lang='eng' class='col-md-6 form-control' placeholder='Enter the English picture name' onblur='imgChange(this)'>
           <input type='checkbox' value='' checked=''>In Scene 7<span class="glyphicon glyphicon-eye-open"></span>
         </div>
         <br>
@@ -32,9 +32,9 @@
       <div class="row">
         <h4>French</h4>
         
-        <div class="row">
+        <div class="row" data-lang="fr">
           <label>Image Picture :</label><br>
-          <input type='text' name='imageFR' data-lang='fr' class='col-md-6 form-control' placeholder='Enter the French picture name' onblur='imgChange(this)'>
+          <input type='text' name='img' data-lang='fr' class='col-md-6 form-control' placeholder='Enter the French picture name' onblur='imgChange(this)'>
           <input type='checkbox' value='' checked=''>In Scene 7<span class="glyphicon glyphicon-eye-open"></span>
         </div>
         <br>
