--- a/template/landingPage/single-imageMap.html
+++ b/template/landingPage/single-imageMap.html
@@ -16,7 +16,7 @@
                    <div class="cb-table-full" style="width:100%; margin-left:auto; margin-right:auto; height:{{imgHeight}}px;">
                      <div class="cb-table-column">
                        <div class="cb-text-holder" style="width: inherit;">
-                         <div class="cb-text" style="text-align:center;">
+                         <div class="cb-text" style="text-align:right;">
                            <span class="banner-title text-white" style=" font-family: MuseoSans-900; ">{{textLEFT}}</span>
                            {{ctaLEFT}}
                           </div>
@@ -40,7 +40,7 @@
                  <div class="cb-table-full" style="width:100%; margin-left:auto; margin-right:auto; height:{{imgHeight}}px;">
                    <div class="cb-table-column">
                      <div class="cb-text-holder" style="width: inherit;">
-                        <div class="cb-text" style="text-align:center;">
+                        <div class="cb-text" style="text-align:left;">
                          <span class="text-white banner-title" style=" font-family: MuseoSans-900; ">{{textRIGHT}}</span>
                           {{ctaRIGHT}}
                         </div>
